--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "4.0.0",
   "description": "Welcome to the WooCommerce MyParcel repository on GitHub. Here you can browse the source, look at open issues and keep track of development.",
   "scripts": {
-    "postinstall": "cp -f node_modules/@myparcel/delivery-options/dist/myparcel.js assets/js",
-    "postcss": "node_modules/postcss-cli/bin/postcss assets/css --replace"
+    "build": "gulp",
+    "watch": "gulp watch"
   },
   "repository": {
     "type": "git",
@@ -21,9 +21,17 @@
     "@myparcel/delivery-options": "^3.3.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
     "@myparcel/eslint-config": "^3.0.0",
     "autoprefixer": "^9.8.6",
-    "husky": "^4.2.5",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean": "^0.4.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-zip": "^5.0.2",
+    "node-sass": "^4.14.1",
     "postcss-cli": "^7.1.1"
   }
 }
